--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,59 @@
-# Dependências
-node_modules
-backend/node_modules
+# Dependencies
+node_modules/
+frontend/node_modules/
+backend/node_modules/
 
 # Build
-build
-dist
-C:/Temp/calc3d-build
+dist/
+frontend/build/
+*.exe
+*.dmg
+*.AppImage
+*.deb
 
-# Banco de dados
-backend/database.db
-*.db
+# Database
+backend/database.sqlite
+backend/*.sqlite
+
+# Environment
+.env
+.env.local
+.env.development
+.env.production
 
 # Logs
+logs/
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Sistema operacional
+# OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # IDE
-.vscode
-.idea
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Temporários
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary
+tmp/
+temp/
 *.tmp
-*.temp
+
+# Package managers
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Electron
 out/
-release/
+.webpack/
