--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "calc3d-backend",
+  "name": "calc3dprint-backend",
   "version": "1.0.0",
-  "description": "Backend para calculadora de impressão 3D",
-  "main": "server.js",
+  "description": "Backend para Calc 3D Print",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "migrate": "node migrate.js",
-    "reset": "node reset-db.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "3d-printing",
+    "calculator",
+    "api"
+  ],
+  "author": "Koalitos",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.6",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
   }
 }
