--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron-dev": "concurrently \"npm run start:backend\" \"cross-env BROWSER=none npm run start:frontend\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "cd frontend && npm run build",
     "build:backend": "cd backend && npm install --production",
+    "generate-icons": "node scripts/generate-icons.js && node scripts/create-ico-icns.js",
     "prebuild": "npm run build",
     "dist": "npm run build && electron-builder",
     "dist:win": "npm run build && electron-builder --win",
@@ -49,7 +50,8 @@
     "reset-db": "cd backend && npm run reset"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^6.6.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
@@ -57,8 +59,10 @@
     "electron": "^27.1.3",
     "electron-builder": "^24.9.1",
     "eslint": "^8.56.0",
+    "png2icons": "^2.0.1",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
+    "to-ico": "^1.1.5",
     "wait-on": "^7.2.0"
   },
   "build": {
