--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,32 @@ on:
   workflow_dispatch:
 
 jobs:
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          name: 🎉 Calc 3D Print ${{ github.ref_name }} - Release Inicial
+          body_path: RELEASE-DESCRIPTION.md
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-windows:
     name: Build Windows
     runs-on: windows-latest
+    needs: create-release
     
     steps:
       - name: Checkout code
@@ -54,6 +77,7 @@ jobs:
   build-macos:
     name: Build macOS
     runs-on: macos-latest
+    needs: create-release
     
     steps:
       - name: Checkout code
@@ -101,6 +125,7 @@ jobs:
   build-linux:
     name: Build Linux
     runs-on: ubuntu-latest
+    needs: create-release
     
     steps:
       - name: Checkout code
