--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,13 +42,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
       
       - name: Install dependencies
         run: |
-          npm ci
-          cd backend && npm ci && cd ..
-          cd frontend && npm ci && cd ..
+          npm install
+          cd backend && npm install && cd ..
+          cd frontend && npm install && cd ..
       
       - name: Build frontend
         run: npm run build
@@ -87,13 +86,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
       
       - name: Install dependencies
         run: |
-          npm ci
-          cd backend && npm ci && cd ..
-          cd frontend && npm ci && cd ..
+          npm install
+          cd backend && npm install && cd ..
+          cd frontend && npm install && cd ..
       
       - name: Build frontend
         run: npm run build
@@ -135,13 +133,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
       
       - name: Install dependencies
         run: |
-          npm ci
-          cd backend && npm ci && cd ..
-          cd frontend && npm ci && cd ..
+          npm install
+          cd backend && npm install && cd ..
+          cd frontend && npm install && cd ..
       
       - name: Build frontend
         run: npm run build
