--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,8 @@ jobs:
     name: Build Windows
     runs-on: windows-latest
     needs: create-release
+    env:
+      CI: false
     
     steps:
       - name: Checkout code
@@ -126,6 +128,8 @@ jobs:
     name: Build macOS
     runs-on: macos-latest
     needs: create-release
+    env:
+      CI: false
     
     steps:
       - name: Checkout code
@@ -175,6 +179,8 @@ jobs:
     name: Build Linux
     runs-on: ubuntu-latest
     needs: create-release
+    env:
+      CI: false
     
     steps:
       - name: Checkout code
