--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,6 +108,9 @@ jobs:
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: false
       
+      - name: List generated files
+        run: dir dist
+      
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -120,7 +123,9 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/*.exe
+          files: |
+            dist/*.exe
+            dist/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -157,7 +162,11 @@ jobs:
           CSC_IDENTITY_AUTO_DISCOVERY: false
       
       - name: List generated files
-        run: ls -lah dist/
+        run: |
+          echo "=== Files in dist/ ==="
+          ls -lah dist/
+          echo "=== DMG files ==="
+          ls -lah dist/*.dmg || echo "No DMG files found"
       
       - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
@@ -171,7 +180,9 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/*.dmg
+          files: |
+            dist/*.dmg
+            dist/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -223,5 +234,6 @@ jobs:
           files: |
             dist/*.AppImage
             dist/*.deb
+            dist/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
