Fix: Disable hardenedRuntime for unsigned macOS builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,73 +4,25 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    if: startsWith(github.ref, 'refs/tags/')
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
       - name: Create Release
-        id: create_release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: 🎉 Calc 3D Print ${{ github.ref_name }} - Release Inicial
-          body: |
-            # 🎉 Calc 3D Print ${{ github.ref_name }} - Release Inicial
-            
-            Sistema completo para calcular custos e preços de venda de impressões 3D.
-            
-            ## ✨ Destaques
-            
-            - 💰 **Cálculo Automático de Custos** - Filamento, energia, depreciação, embalagem e taxas
-            - 📊 **Gestão Completa** - Máquinas, filamentos, projetos, vendas e despesas
-            - 🎯 **Upload de G-code** - Extração automática de peso e tempo de impressão
-            - 💾 **Backup Integrado** - Seus dados sempre seguros
-            - 🔐 **Sistema de Login** - Múltiplos usuários com autenticação JWT
-            - 🎨 **Interface Moderna** - Design profissional com tema escuro
-            - 🔄 **Auto-updater** - Atualizações automáticas
-            
-            ## 📥 Instalação
-            
-            ### 🪟 Windows
-            Baixe e execute `Calc3DPrint-Setup-1.0.0.exe`
-            
-            ### 🍎 macOS
-            - **Intel**: `Calc3DPrint-1.0.0-x64.dmg`
-            - **Apple Silicon (M1/M2/M3)**: `Calc3DPrint-1.0.0-arm64.dmg`
-            
-            ### 🐧 Linux
-            - **Universal**: `Calc3DPrint-1.0.0-x64.AppImage`
-            - **Debian/Ubuntu**: `calc3dprint_1.0.0_amd64.deb`
-            
-            **Requisitos**: 4 GB RAM, 500 MB espaço
-            
-            ## 🚀 Novidades
-            
-            ✅ Interface moderna e intuitiva  
-            ✅ Tela de loading animada  
-            ✅ Ícone personalizado (impressora 3D)  
-            ✅ Backend integrado (sem instalações extras)  
-            ✅ Banco de dados SQLite local  
-            ✅ Instaladores profissionais para todas as plataformas  
-            ✅ Auto-updater (atualizações automáticas)  
-            ✅ Suporte multiplataforma (Windows, macOS, Linux)  
-            
-            ## 🐛 Reportar Bugs
-            
-            Encontrou um problema? [Abra uma issue](https://github.com/koalitos/calc3D/issues)
-            
-            ---
-            
-            **Desenvolvido com ❤️ para a comunidade de impressão 3D**
+          body_path: RELEASE-DESCRIPTION.md
           draft: false
           prerelease: false
         env:
@@ -79,6 +31,7 @@ jobs:
   build-windows:
     name: Build Windows
     runs-on: windows-latest
+    if: startsWith(github.ref, 'refs/tags/')
     needs: create-release
     env:
       CI: false
@@ -121,17 +74,16 @@ jobs:
       
       - name: Upload to Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             dist/*.exe
-            dist/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
     name: Build macOS
     runs-on: macos-latest
+    if: startsWith(github.ref, 'refs/tags/')
     needs: create-release
     env:
       CI: false
@@ -167,6 +119,9 @@ jobs:
           ls -lah dist/
           echo "=== DMG files ==="
           ls -lah dist/*.dmg || echo "No DMG files found"
+          echo "=== Checking app structure ==="
+          ls -lah dist/mac/ || echo "No mac folder"
+          ls -lah dist/mac-arm64/ || echo "No mac-arm64 folder"
       
       - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
@@ -178,17 +133,16 @@ jobs:
       
       - name: Upload to Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             dist/*.dmg
-            dist/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-linux:
     name: Build Linux
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     needs: create-release
     env:
       CI: false
@@ -229,11 +183,9 @@ jobs:
       
       - name: Upload to Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             dist/*.AppImage
             dist/*.deb
-            dist/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
