--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start:backend": "cd backend && npm start",
     "start:frontend": "cd frontend && npm start",
     "electron": "electron .",
-    "electron-dev": "concurrently \"npm run start:backend\" \"cross-env BROWSER=none npm run start:frontend\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "concurrently \"npm run start:backend\" \"cross-env BROWSER=none npm run start:frontend\" \"wait-on http://localhost:35000 && electron .\"",
     "dev": "npm run electron-dev",
     "build": "cd frontend && npm run build",
     "build:backend": "cd backend && npm install --production",
@@ -61,7 +61,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^27.1.3",
+    "electron": "^27.3.11",
     "electron-builder": "^24.9.1",
     "eslint": "^8.56.0",
     "png2icons": "^2.0.1",
@@ -74,6 +74,8 @@
     "appId": "com.koalitos.calc3dprint",
     "productName": "Calc 3D Print",
     "copyright": "Copyright © 2025 Koalitos",
+    "afterSign": null,
+    "afterPack": null,
     "directories": {
       "output": "dist",
       "buildResources": "build"
@@ -137,7 +139,8 @@
         {
           "target": "dmg",
           "arch": [
-            "arm64"
+            "arm64",
+            "x64"
           ]
         }
       ],
