--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calc3dprint",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Sistema completo para calcular custos e preços de venda de impressões 3D",
   "main": "electron.js",
   "author": {
@@ -155,24 +155,8 @@
       "type": "distribution"
     },
     "dmg": {
-      "contents": [
-        {
-          "x": 130,
-          "y": 220
-        },
-        {
-          "x": 410,
-          "y": 220,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ],
       "title": "Calc 3D Print ${version}",
-      "icon": "build/icon.icns",
-      "window": {
-        "width": 540,
-        "height": 380
-      }
+      "icon": "build/icon.icns"
     },
     "linux": {
       "target": [
