--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "electron": "electron .",
     "electron-dev": "concurrently \"npm run start:backend\" \"cross-env BROWSER=none npm run start:frontend\" \"wait-on http://localhost:35000 && electron .\"",
     "dev": "npm run electron-dev",
-    "build": "cd frontend && npm run build",
+    "build": "node scripts/inject-version.js && cd frontend && npm run build",
     "build:backend": "cd backend && npm install --production",
     "generate-icons": "node scripts/generate-icons.js && node scripts/create-ico-icns.js",
     "check": "node scripts/check-setup.js",
@@ -45,6 +45,7 @@
     "dist:mac": "npm run build && electron-builder --mac",
     "dist:linux": "npm run build && electron-builder --linux",
     "dist:all": "npm run build && electron-builder -mwl",
+    "publish": "electron-builder --publish always",
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint . --ext .js,.jsx",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
@@ -87,6 +88,7 @@
     },
     "files": [
       "electron.js",
+      "electron-prod.js",
       "preload.js",
       "loading.html",
       "build/icon.ico",
@@ -108,7 +110,7 @@
           "package.json",
           "node_modules/**/*.js",
           "node_modules/**/*.node",
-          "node_modules/**/package.json",
+          "node_modules/**/*.json",
           "!node_modules/**/test/**",
           "!node_modules/**/tests/**",
           "!node_modules/**/*.{md,ts,map,d.ts,txt,yml,yaml}",
